apps/wikijs/wikijs-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wikijs
  labels:
    project: DennisCloudOffice
