apps/wikijs/wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app: vikunja
spec:
  selector:
    app: wikijs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
