apps/wikijs/wikijs-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wikijs-ingressroute
  namespace: wikijs
  annotations:
    gethomepage.dev/href: "https://wiki.denniscloud.io"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: My Wiki space
    gethomepage.dev/group: DennisCloud Office
    gethomepage.dev/icon: wikijs.png
    gethomepage.dev/app: wikijs
    gethomepage.dev/name: Wiki-JS
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wiki.denniscloud.io`)
      kind: Rule
      services:
        - name: wikijs
          port: 80
  tls:
    secretName: wikijs-cert-secret
